# rl-bench

./: .gitignore  LICENSE  README.md  presentation.md  pyproject.toml  results.md
.cursor/rules/: no-cursor-git-coauthor.mdc
configs/: macura.yaml  macura_halfcheetah.yaml  mbpo.yaml  mbpo_halfcheetah.yaml  sac.yaml  sac_halfcheetah.yaml
docs/: halfcheetah_comparison.md
results/halfcheetah/macura_seed0/: config.yaml  eval.csv  metrics.jsonl
results/halfcheetah/mbpo_halfcheetah_seed0/: config.yaml  eval.csv  metrics.jsonl
results/halfcheetah/sac_halfcheetah_seed0/: config.yaml  eval.csv  metrics.jsonl
scripts/: _train_common.sh  archive_mbpo_runs.sh  plot_runs.py  run_mbpo_all_seeds.sh  sync_macura_upstream.sh  train_macura.sh  train_mbpo.sh  train_sac.sh
src/rl_bench/: buffer.py  cfg_bridge.py  ensemble.py  envs.py  eval.py  exploration.py  live_plot.py  logger.py  nets.py  sac.py  train_macura.py  train_mbpo.py  train_sac.py  upstream_agent.py  upstream_env.py  upstream_path.py  upstream_video.py  utils.py  video.py
tests/: test_buffer.py  test_cfg_bridge.py  test_ensemble.py  test_envs.py  test_eval.py  test_exploration.py  test_live_plot.py  test_logger.py  test_nets.py  test_sac_update.py  test_smoke_pendulum.py  test_utils.py  test_video.py
